--- a/pages/user/user.wxml
+++ b/pages/user/user.wxml
@@ -46,7 +46,7 @@
     </view>
     <!-- Function Area -->
     <view class='addDevicePanel flex flex-direction' wx:if='{{userInfo.level==1||userInfo.level==2}}'>
-      <button class='{{addDeviceFromFlag?"primary":"gray"}} btn block lg' catchtap='addDeviceFromShow'>添加设备</button>
+      <button class='{{addDeviceFromFlag?"primary":"gray"}} btn block lg' catchtap='addDeviceFormShow'>添加设备</button>
       <form class='addDeviceForm form-box' style='height:{{addDeviceFromFlag==2?"700rpx":0}};opacity:{{addDeviceFromFlag==2?"1":0}};' hidden='{{!addDeviceFromFlag}}' bindsubmit='addDeviceSubmit'>
         <view class='form-box form-avatar-box'>
           <view class='form-avatar' catchtap='chooseDeviceAvatar' style='background-image:url({{deviceAvatarTempSrc}})'>
@@ -86,7 +86,7 @@
           <textarea name='deviceDesc' placeholder='设备说明(最大255)' maxlength='255'></textarea>
         </view>
         <view class='btn-group-line flex'>
-          <button class='primary btn hollow sm' form-type='reset' catchtap='addDeviceFromShow'>取消</button>
+          <button class='primary btn hollow sm' form-type='reset' catchtap='addDeviceFormShow'>取消</button>
           <button class='primary btn hollow sm' form-type='submit'>添加</button>
         </view>
       </form>
