--- a/pages/single/single.wxml
+++ b/pages/single/single.wxml
@@ -42,24 +42,32 @@
             </view>
           </view>
         </view>
-        <view class='device-bar-foot'>
+        <view class='device-bar-foot' hidden='{{!!showDeviceDetail}}'>
           <view class='s-notice {{showDeviceDetail?"":"s-notice-hidden"}}'>
             <text class='iconfont icon-titles success-text'></text>
             <text class='text-lg ml-xs'>设备编号: {{device._id}}</text>
           </view>
         </view>
         <view class='list-box device-bar-detail {{showDeviceDetail?"device-bar-detail-spread":""}}'>
+          <view class='s-notice'>
+            <text class=' iconfont icon-titles success-text'></text>
+            <text class='text-lg ml-xs '><text class='boldText'>设备名:</text> {{device.name}}</text>
+          </view>
+          <view class='s-notice'>
+            <text class='iconfont icon-titles success-text'></text>
+            <text class='text-lg ml-xs'><text class='boldText'>设备编号:</text> {{device._id}}</text>
+          </view>
           <view class='list-li'>
             <view>
               <text class='iconfont icon-titles success-text'></text>
-              <text class='text-lg ml-xs'>设备描述：</text>
+              <text class='text-lg ml-xs'><text class='boldText'>设备描述：</text></text>
             </view>
           </view>
           <view class='device-description'>{{device.description}}</view>
           <view class='list-li'>
             <view>
               <text class='iconfont icon-titles success-text'></text>
-              <text class='text-lg ml-xs'>设备主体：</text>
+              <text class='text-lg ml-xs'><text class='boldText'>设备主体：</text></text>
             </view>
             <view wx:if='{{!device.user}}'>尚未绑定</view>
           </view>
@@ -86,7 +94,7 @@
           <view class='list-li'>
             <view>
               <text class='iconfont icon-titles success-text'></text>
-              <text class='text-lg ml-xs'>负责人：</text>
+              <text class='text-lg ml-xs'><text class='boldText'>负责人：</text></text>
             </view>
           </view>
           <view class='form-box form-avatar-box'>
@@ -112,7 +120,7 @@
           <view class='list-li'>
             <view>
               <text class='iconfont icon-titles success-text'></text>
-              <text class='text-lg ml-xs'>设备图片</text>
+              <text class='text-lg ml-xs'><text class='boldText'>设备图片</text></text>
             </view>
           </view>
           <view class='doc-main'>
@@ -136,56 +144,94 @@
   </view>
   <!-- switch bar -->
   <view class='topbar'>
-    <view class='topbar-food topbar-btn {{switchComment?"":"active"}}' bindtap='switchToContent'>
-      <text>数据</text>
+    <view class='topbar-food topbar-btn {{switchMonitor?"active":""}}' catchtap='switchToMonitor'>
+      <text>仪表</text>
     </view>
-    <view class='topbar-comment topbar-btn {{switchComment?"active":""}}' bindtap='switchToComment'>
-      <text>记录</text>
+    <view class='topbar-food topbar-btn {{switchData?"active":""}}' catchtap='switchToData'>
+      <text>历史</text>
+    </view>
+    <view class='topbar-comment topbar-btn {{switchComment?"active":""}}' catchtap='switchToComment'>
+      <text>备忘</text>
     </view>
   </view>
-  <!-- content box -->
-  <view class='content-box' style='left:{{switchComment?"-100%":""}}'>
-    <view class='data-index {{showDataIndex?"showDataIndex":""}}' wx:for='{{dataIndex}}' wx:key='index' catchtap='showDataIndex' wx:hidden='{{!dataIndex}}'>
+  <!-- monitor box -->
+  <view class='content-box' style='left:{{switchMonitor?"0":switchData?"-100%":"-200%"}}'>
+    <view class='data-index {{showDataIndex?"showDataIndex":""}}' wx:for='{{dataIndex}}' wx:key='index' catchtap='showDataIndex' hidden='{{!dataIndex}}' data-index-id='{{item.id}}' catchtap='goToIndexDetail'>
       <view class='data-index-name'>
         <text class='iconfont icon-titles warning-text'></text>
         <text class='text-lg ml-xs'>{{item.n}}</text>
       </view>
       <view class='data-index-info' data-index-id='{{item.n}}'>
-        <view>{{item.v}}</view>
-        <block wx:if='{{item.v-item.min<0}}'>
+        <view>{{item.val}}</view>
+        <block wx:if='{{item.val-item.min<0}}'>
           <view class='data-index-progress'>
-            <text style='width:{{(item.min-item.v)/(item.max-item.min)>1?100:100*(item.min-item.v)/(item.max-item.min)}}%;background:#dd514c;'></text>
+            <text style='width:{{(item.min-item.val)/(item.max-item.min)>1?100:100*(item.min-item.val)/(item.max-item.min)}}%;background:#dd514c;'></text>
             <text class='data-index-progress-text'>Min</text>
-            <text style='width:{{(item.min-item.v)/(item.max-item.min)>1?0:100*(1-(item.min-item.v)/(item.max-item.min))}}%;background:#eee;'></text>
+            <text style='width:{{(item.min-item.val)/(item.max-item.min)>1?0:100*(1-(item.min-item.val)/(item.max-item.min))}}%;background:#eee;'></text>
             <text class='data-index-progress-text'>Max</text>
           </view>
         </block>
-        <block wx:elif='{{item.v-item.max>0}}'>
+        <block wx:elif='{{item.val-item.max>0}}'>
           <view class='data-index-progress'>
             <text class='data-index-progress-text'>Min</text>
-            <text style='width:{{(item.v-item.max)/(item.max-item.min)>1?0:100*(1-(item.v-item.max)/(item.max-item.min))}}%;background:#eee;'></text>
+            <text style='width:{{(item.val-item.max)/(item.max-item.min)>1?0:100*(1-(item.val-item.max)/(item.max-item.min))}}%;background:#eee;'></text>
             <text class='data-index-progress-text'>Max</text>
-            <text style='width:{{(item.v-item.max)/(item.max-item.min)>1?100:100*(item.v-item.max)/(item.max-item.min)}}%;background:#dd514c;'></text>
+            <text style='width:{{(item.val-item.max)/(item.max-item.min)>1?100:100*(item.val-item.max)/(item.max-item.min)}}%;background:#dd514c;'></text>
           </view>
         </block>
         <block wx:else>
           <view class='data-index-progress'>
             <text class='data-index-progress-text'>Min</text>
-            <text style='width:{{100*(item.v-item.min)/(item.max-item.min)}}%;background:#eee;'></text>
+            <text style='width:{{100*(item.val-item.min)/(item.max-item.min)}}%;background:#eee;'></text>
             <text style='width:20%;background-color:#39b54a;'></text>
-            <text style='width:{{100*(item.max-item.v)/(item.max-item.min)}}%;background:#eee;'></text>
+            <text style='width:{{100*(item.max-item.val)/(item.max-item.min)}}%;background:#eee;'></text>
             <text class='data-index-progress-text'>Max</text>
           </view>
         </block>
       </view>
     </view>
-    <view wx:hidden='{{dataIndex}}' class='contentIsNull'>
+    <view hidden='{{dataIndex}}' class='contentIsNull'>
       <image src='/images/icon/404_1.png' mode='aspectFill'></image>
       <view class='warning-text'>暂时什么也没有</view>
     </view>
   </view>
+  <!-- content box -->
+  <view class='data-box' style='left:{{switchData?"0":switchMonitor?"100%":"-100%"}}'>
+    <view class='section'>
+      <picker mode="date" value="{{queryDate}}" start="{{startDate}}" end="{{todayDate}}" bindchange="bindDateChange">
+        <view class="picker">
+          选择查询日期: {{queryDate}}
+        </view>
+      </picker>
+      <checkbox-group bindchange="queryCheckboxChange">
+        <checkbox value="showGraph" checked="{{showDataGraph}}" /> 数据图
+        <label class="queryCheckbox" wx:for="{{queryCheckboxItems}}">
+          <checkbox value="{{item.name}}" checked="{{item.checked}}" /> {{item.value}}
+        </label>
+      </checkbox-group>
+    </view>
+    <view hidden='{{dataTableItems}}' class='contentIsNull'>
+      <image src='/images/icon/404_1.png' mode='aspectFill'></image>
+      <view class='warning-text'>暂时什么也没有</view>
+    </view>
+    <!-- table -->
+    <view class='dataTable'>
+      <view class='table t-green' wx:for='{{dataTableItems}}' wx:key='index' wx:for-index='itemIndex'>
+        <view class='ttitle' wx:if='{{item.ttitle}}'>{{item.ttitle}}</view>
+        <view class='thead'>
+          <view class='th' wx:for='{{item.thead}}' wx:for-item='thead'>{{thead}}</view>
+        </view>
+        <view class='tr {{tbodyIndex%2==0?"t-bg-g":"t-bg-w"}}' wx:for='{{item.tbody}}' wx:for-item='tbody' wx:for-index='tbodyIndex'>
+          <view class='td' wx:for='{{tbody}}' wx:for-item='td' wx:for-index='tdIndex'>
+            <view wx:if='{{tdIndex==tbody.length-1}}' class='dataIndexStatus {{(td==2||td==-2)?"danger":(td==1||td==-1)?"warning":"success"}}'></view>
+            <view wx:else>{{td}}</view>
+          </view>
+        </view>
+      </view>
+    </view>
+  </view>
   <!-- comment box -->
-  <view class='comment-box' style='left:{{switchComment?"0":""}}'>
+  <view class='comment-box' style='left:{{switchComment?"0":switchData?"100%":"200%"}}'>
     <scroll-view class='comment-scroll' scroll-y>
       <view class="comment" wx:for='{{[1,2,3,4,5,6]}}'>
         <view class="comment-item ph-sm">
