--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -2,7 +2,7 @@
 
 /**index.wxss**/
 
-.category-nav {
+/* .category-nav {
   overflow: hidden;
 }
 
@@ -11,7 +11,7 @@
   width: 100%;
   padding: 30rpx 0 0;
   align-items: center;
-}
+} */
 
 .bindDevicePanel {
   padding: 16rpx;
