--- a/pages/single/single.wxss
+++ b/pages/single/single.wxss
@@ -156,6 +156,16 @@
   font-size: 32rpx;
 }
 
+.dataTable .tips {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.dataTable .tips .dataIndexStatus {
+  margin: 0 12rpx;
+}
+
 /* comment box */
 
 .comment-box {
@@ -163,6 +173,11 @@
   width: 100%;
   left: 200%;
   top: 390rpx;
+}
+
+.icon-nav-box .icon-nav {
+  justify-content: space-around;
+  background: none;
 }
 
 /* index */
